# CMakeProject

./: a.txt  aa.c  b.txt  c.txt  hello.txt
TMPCMAKE/: CMakeLists.txt
TMPCMAKE/calc/: CMakeLists.txt  div.c  mul.c
TMPCMAKE/calc/add_sub/: CMakeLists.txt  add.c  sub.c
TMPCMAKE/inc/: calc.h  sort.h
TMPCMAKE/sort/: CMakeLists.txt
TMPCMAKE/test1/: CMakeLists.txt  main.c
TMPCMAKE/test2/: CMakeLists.txt  main.c
